# stherm

./: .gitignore  CHANGELOG.md  CMakeLists.txt  ContactContractor.md  Main.qml  README.md  Update.md  Update_manual.md  getsshpass.sh  heartbeatsender.cpp  heartbeatsender.h  main.cpp  protobuf.cmake  systemctlRestart.sh  update.sh  update_fw_nrf.sh  update_fw_nrf_seamless.sh
Backend/: AccessCodeGenerator.cpp  AccessCodeGenerator.h  AppSpecCPP.cpp  AppSpecCPP.h  AppUtilities.cpp  AppUtilities.h  Config.h  DataParser.cpp  DataParser.h  DateTimeManager.cpp  DateTimeManager.h  DateTimeManagerCPP.cpp  DateTimeManagerCPP.h  DeviceAPI.cpp  DeviceAPI.h  DeviceControllerCPP.cpp  DeviceControllerCPP.h  DeviceInfo.cpp  DeviceInfo.h  LogCategoires.cpp  LogCategoires.h  LogHelper.h  Logger.cpp  ModelBase.cpp  ModelBase.h  NetworkInterface.cpp  NetworkInterface.h  NmcliInterface.h  PhpApi.cpp  PhpApi.h  Property.h  QRCodeGenerator.h  ScreenSaverManager.cpp  ScreenSaverManager.h  TimezonesDSTMap.h  UARTConnection.cpp  UARTConnection.h  UtilityHelper.cpp  UtilityHelper.h  deviceIOController.cpp  (+3 more)
Backend/Core/: BaseScheme.cpp  BaseScheme.h  DevApiExecutor.cpp  DevApiExecutor.h  HttpExecutor.cpp  HttpExecutor.h  HumidityScheme.cpp  HumidityScheme.h  NetworkManager.cpp  NetworkManager.h  NetworkWorker.cpp  NetworkWorker.h  ProcessExecutor.cpp  ProcessExecutor.h  Relay.cpp  Relay.h  RestApiExecutor.cpp  RestApiExecutor.h  Schedule.cpp  Schedule.h  ScheduleCPP.cpp  ScheduleCPP.h  Scheme.cpp  Scheme.h  SchemeDataProvider.cpp  SchemeDataProvider.h  Sync.cpp  Sync.h  System.cpp  System.h  hardware.cpp  hardware.h
Backend/Data/: UserData.h
Backend/Device/: SystemAccessories.cpp  SystemAccessories.h  SystemSetup.cpp  SystemSetup.h  current_stage.cpp  current_stage.h  device_config.cpp  device_config.h  nuve_types.h  sensors.cpp  sensors.h  timing.cpp  timing.h
Backend/GPIO/: GpioHandler.cpp  GpioHandler.h
Backend/Legacy/daemon/: CMakeLists.txt  DaemonStatus.cpp  DaemonStatus.h  Daemon_helper.cpp  Daemon_helper.h  DeltaCorrection.cpp  DeltaCorrection.h  InputParametrs.cpp  InputParametrs.h  Peripheral.h  WifiManager.cpp  WifiManager.h  crc.c  def_values.h  main.cpp  mainpage.md  php_interface.cpp  php_interface.h
Backend/Legacy/daemon/lowlevellib/: CMakeLists.txt  Peripheral.cpp  Peripheral.h  RF_types.h  crc.h  serial_drv.h
Backend/Legacy/daemon/modules/: CMakeLists.txt  DaemonStatus.cpp  DaemonStatus.h  Daemon_helper.cpp  Daemon_helper.h
Backend/Legacy/daemon/modules/nrf/: NRFThread.cpp
Backend/Legacy/daemon/modules/threads/: NRFThread.cpp  NRFThread.h  TIThread.cpp  TIThread.h
Backend/Network/: NetworkInterface.cpp  NetworkInterface.h  WifiInfo.cpp  WifiInfo.h
Backend/Nmcli/: Nmcli.h  NmcliInterface.cpp  NmcliInterface.h  NmcliObserver.cpp  NmcliObserver.h
Backend/Proto/: ProtoDataManager.cpp  ProtoDataManager.h  ProtoDataManagerCPP.cpp  ProtoDataManagerCPP.h  streamdata.pb.cc  streamdata.pb.h
Backend/Services/: PerfTestService.cpp  PerfTestService.h
Backend/php/: php_hardware.cpp  php_hardware.h  php_schedule.cpp  php_schedule.h  php_sensors.cpp  php_sensors.h  php_system.cpp  php_system.h  php_update.cpp  php_update.h  php_wifi.cpp  php_wifi.h
Core/: AppCore.qml  AppSpec.qml  Backlight.qml  ContactContractor.qml  DateTimeManager.qml  Device.qml  DeviceController.qml  Fan.qml  I_Device.qml  I_DeviceController.qml  I_Model.qml  Lock.qml  Message.qml  MessageController.qml  NightMode.qml  Schedule.qml  ScheduleController.qml  SchedulesController.qml  SchedulesModel.qml  SelectionModel.qml  Sensor.qml  SensorController.qml  ServiceTitan.qml  Setting.qml  SimDevice.qml  SimDeviceController.qml  ToastManager.qml  UserPolicyTerms.qml  Utils.qml  Vacation.qml  Wifi.qml  WifiController.qml  WifiDevice.qml  Wiring.qml  simDevice.qml
Docs/Proto/: Monitoring.md  streamdata.proto
Resources/: privacyPolicy.md  termOfUse.md
Ronia/: ApplicationWindow.qml  Button.qml  CMakeLists.txt  CheckBox.qml  ComboBox.qml  ItemDelegate.qml  LimitedRangeSlider.qml  Popup.qml  RadioButton.qml  ScrollIndicator.qml  Slider.qml  Style.qml  Switch.qml  TextField.qml  ToolButton.qml  Tumbler.qml
Ronia/impl/: ButtonLabel.qml  ButtonStyle.qml  CheckIndicator.qml  CursorDelegate.qml  FontIconsSize.qml  RadioButtonStyle.qml  RadioIndicator.qml  RangeSliderHandleData.qml  RangeSliderHandles.qml  SliderHandle.qml  SwitchIndicator.qml  SwitchStyle.qml  TextFieldStyle.qml
Ronia/impl/src/: BindinableQReal.cpp  BindinableQReal.h  RangeSliderHandleData.cpp  RangeSliderHandleData.h
UiCore/: AppSettings.qml  AppStyle.qml  FAIcons.qml  I_Dialog.qml  I_PopUp.qml  PopUpLayout.qml  ShortcutManager.qml  SimpleStackView.qml  UiPreferences.qml  UiSession.qml  UiSessionPopups.qml
UiCore/Components/: AirConditionItem.qml  BrightnessSlider.qml  ButtonInverted.qml  CautionRectangle.qml  ColorSlider.qml  ContactNuveSupportLabel.qml  CurrentHumidityButton.qml  CurrentHumidityLabel.qml  CurrentTempratureLabel.qml  DateTimeLabel.qml  DesiredTempratureItem.qml  DeviceToggleButton.qml  ExpandableItem.qml  FanButton.qml  HoldButton.qml  HorizontalTimeTumbler.qml  HumidityLabel.qml  InfoToolButton.qml  MenuButton.qml  PINKeyboard.qml  (+32 more)
View/: AboutDevicePage.qml  AddSchedulePage.qml  AlertsNotificationsPage.qml  ApplicationMenu.qml  ApplicationMenuList.qml  BackdoorUpdatePage.qml  BacklightPage.qml  BasePageView.qml  ColorTestPage.qml  ContactContractorPage.qml  ContractorInformationFinishPage.qml  ContractorInformationPage.qml  DeviceLocationPage.qml  DualFuelHeatingPage.qml  FanPage.qml  Home.qml  HumidityPage.qml  InstallationTypePage.qml  LockPage.qml  MainView.qml  MenuListView.qml  MessagePopupView.qml  MobileAppPage.qml  NexgenIcon.qml  NightModePage.qml  OrganizationIcon.qml  PerfTestPage.qml  PrivacyPolicyPage.qml  RequestTechPriorityPage.qml  ResidenceTypePage.qml  ScheduleView.qml  ScreenSaver.qml  SensorsPage.qml  SettingsPage.qml  SplashScreen.qml  SystemInfoPage.qml  SystemModePage.qml  SystemSetupPage.qml  SystemUpdatePage.qml  ThermostatNamePage.qml  (+7 more)
watchdog/: CMakeLists.txt  Watchdog.cpp  Watchdog.h  main.cpp
(+669 files in other folders)
